# delta-lake

./: .gitignore  Makefile  README.md  pyproject.toml
delta-demo/: deltalake-demo.ipynb  ingest.py
