[tool.poetry]
name = "delta-demo"
version = "0.1.0"
description = ""
authors = ["Pee Tankulrat <{ID}+{username}@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
jupyterlab = "^3.4.8"
delta-spark = "~2.1.0"
pyspark = "~3.3.0"
dload = "^0.6"
pandas = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
